<resources>
    <string name="app_name">PM0120242P</string>
    <string name="IngresoNombre">Ingrese su Nombre</string>
    <string name="IngresoApellido">Ingrese su Apellido</string>
    <string name="Formulario">Formulario de Ingreso</string>
    <string name="IngresoEdad">Ingrese su Edad</string>
    <string name="IngresoCorreo">Ingrese su Correo</string>
    <string name="TomarFoto">Tomar Foto</string>
</resources>